--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
     "core-js": "^2.5.1",
+    "request": "^2.83.0",
     "rxjs": "^5.2.0",
     "systemjs": "^0.20.19",
     "zone.js": "^0.8.18"
